include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void sger_(const zynum_blas_int *m, const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy, float *a, const zynum_blas_int *lda);
void dger_(const zynum_blas_int *m, const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, const double *y, const zynum_blas_int *incy, double *a, const zynum_blas_int *lda);
void cgeru_(const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *a, const zynum_blas_int *lda);
void zgeru_(const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *a, const zynum_blas_int *lda);
void cgerc_(const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *a, const zynum_blas_int *lda);
void zgerc_(const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *a, const zynum_blas_int *lda);
void ssyr_(const char *u, const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, float *a, const zynum_blas_int *lda);
void dsyr_(const char *u, const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, double *a, const zynum_blas_int *lda);
void cher_(const char *u, const zynum_blas_int *n, const float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *a, const zynum_blas_int *lda);
void zher_(const char *u, const zynum_blas_int *n, const double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *a, const zynum_blas_int *lda);
void sspr_(const char *u, const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, float *ap);
void dspr_(const char *u, const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, double *ap);
void chpr_(const char *u, const zynum_blas_int *n, const float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *ap);
void zhpr_(const char *u, const zynum_blas_int *n, const double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *ap);
void ssyr2_(const char *u, const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy, float *a, const zynum_blas_int *lda);
void dsyr2_(const char *u, const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, const double *y, const zynum_blas_int *incy, double *a, const zynum_blas_int *lda);
void cher2_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *a, const zynum_blas_int *lda);
void zher2_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *a, const zynum_blas_int *lda);
void sspr2_(const char *u, const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy, float *ap);
void dspr2_(const char *u, const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, const double *y, const zynum_blas_int *incy, double *ap);