include/zynum/blas/blas.f90


    subroutine sger( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="sger_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine sger

    subroutine dger( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="dger_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine dger

    subroutine cgeru( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="cgeru_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine cgeru

    subroutine zgeru( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="zgeru_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine zgeru

    subroutine cgerc( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="cgerc_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine cgerc

    subroutine zgerc( &
        m, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="zgerc_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine zgerc

    subroutine ssyr( &
        u, n, alpha, x, incx, a, &
        lda &
    ) bind(C, name="ssyr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine ssyr

    subroutine dsyr( &
        u, n, alpha, x, incx, a, &
        lda &
    ) bind(C, name="dsyr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine dsyr

    subroutine cher( &
        u, n, alpha, x, incx, a, &
        lda &
    ) bind(C, name="cher_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine cher

    subroutine zher( &
        u, n, alpha, x, incx, a, &
        lda &
    ) bind(C, name="zher_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine zher

    subroutine sspr( &
        u, n, alpha, x, incx, ap &
    ) bind(C, name="sspr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: ap(*)
    end subroutine sspr

    subroutine dspr( &
        u, n, alpha, x, incx, ap &
    ) bind(C, name="dspr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: ap(*)
    end subroutine dspr

    subroutine chpr( &
        u, n, alpha, x, incx, ap &
    ) bind(C, name="chpr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: ap(*)
    end subroutine chpr

    subroutine zhpr( &
        u, n, alpha, x, incx, ap &
    ) bind(C, name="zhpr_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: ap(*)
    end subroutine zhpr

    subroutine ssyr2( &
        u, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="ssyr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine ssyr2

    subroutine dsyr2( &
        u, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="dsyr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine dsyr2

    subroutine cher2( &
        u, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="cher2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine cher2

    subroutine zher2( &
        u, n, alpha, x, incx, y, &
        incy, a, lda &
    ) bind(C, name="zher2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: a(*)
      integer(blasint), intent(in) :: lda
    end subroutine zher2

    subroutine sspr2( &
        u, n, alpha, x, incx, y, &
        incy, ap &
    ) bind(C, name="sspr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(inout) :: ap(*)
    end subroutine sspr2

    subroutine dspr2( &
        u, n, alpha, x, incx, y, &
        incy, ap &
    ) bind(C, name="dspr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(inout) :: ap(*)
    end subroutine dspr2
